--- a/estilos/style.css
+++ b/estilos/style.css
@@ -30,7 +30,7 @@ section#login{
     transform: translate(-50%, -50%);
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 512px;
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.596);
@@ -63,5 +63,63 @@ div#formulario > h1{
 
 div#formulario > p{
     font-size: 0.8em;
+
+}
+
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color:cornflowerblue;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+
+}
+
+
+form > input[type=submit]:hover{
+    background-color: rgb(98, 153, 255);
+}
+
+
+form > a.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 30px;
+    text-decoration: none;
+    background-color: rgba(240, 248, 255, 0.308);
+    border: 2px solid lightblue;
+    border-radius: 6px;
+    margin-top: 10px;
+    color: rgb(30, 98, 245);
     
 }
+
+
+form > a.botao:hover{
+    background-color:rgba(100, 148, 237, 0.404);
+}
+
+
+form > div.campo{
+    background-color: rgb(81, 121, 194);
+    display:block;
+    width: 100%;
+    height: 35px;
+    border-radius: 6px;
+    margin: 6px 0px;
+    padding: 5px;
+
+    
+
+    
+}
+
+
+
