--- a/estilos/style.css
+++ b/estilos/style.css
@@ -95,7 +95,7 @@ form > a.botao{
     text-decoration: none;
     background-color: rgba(240, 248, 255, 0.308);
     border: 2px solid lightblue;
-    border-radius: 6px;
+    border-radius: 8px;
     margin-top: 10px;
     color: rgb(30, 98, 245);
     
@@ -111,15 +111,35 @@ form > div.campo{
     background-color: rgb(81, 121, 194);
     display:block;
     width: 100%;
-    height: 35px;
-    border-radius: 6px;
+    height: 37px;
+    border-radius: 8px;
     margin: 6px 0px;
-    padding: 5px;
-
+    border: 2px solid lightblue;
     
-
     
 }
 
+
+div.campo >span{
+    color: white;
+    font-size: 2em;
+    width: 42px;
+    padding: 5px;
+
+}
+
+
+div.campo > input{
+    background-color: rgb(182, 208, 247);
+    font-size: 1em;
+    width: calc(100% - 21%);
+    height: 100%;
+    transform: translateY(-15px);
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+
+
+}
 
 
